# OS-from-Assembly

./: CMakeLists.txt  OS From Assembly.sln  OS from Assembly.sln  README.md  program.asm  program.dmp  program.out
Assembler/: Assembler.cpp  Assembler.vcxproj  Assembler.vcxproj.filters  Buffer.h  DFA.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  cpp.hint  demo_program.asm
Assembler/demo/: program.asm
Binary Simulator/: .bash_history  .viminfo  Binary Simulator.vcxproj  Binary Simulator.vcxproj.filters  CPU.cpp  Instructions.txt
Binary Simulator/input/: data.txt  instructions.txt
Binary Simulator/output/: dump.txt
BinarySimulator/: CPU.cpp  memory_input.txt
Compiler/: AST.cpp  AST.h  Buffer.h  Compiler.cpp  DFA.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  code.jack  compiler.out  grammar.txt
CompilerEngine/: ast_logic.ixx  ast_structures.ixx  parser_logic.ixx  parser_structures.ixx
Helpers/: Helpers.vcxitems  Helpers.vcxitems.filters  constexpr_stream.ixx  generator.ixx  helpers.ixx
Jack/: BinarySimulator.vcxitems  BinarySimulator.vcxitems.filters  assembler.cpp  assembler.ixx  compiler_backend.cpp  compiler_backend.ixx  compiler_frontend.cpp  compiler_frontend.ixx  jack.ixx  jack_compiler.ixx  simulator.cpp  simulator.ixx  utils.ixx  vm.ixx  vm_backend.cpp  vm_backend.ixx  vm_frontend.cpp  vm_frontend.ixx
OS From Assembly/: Main.jack  OS From Assembly.cpp  OS From Assembly.vcxproj  OS From Assembly.vcxproj.filters  instructions.out  memory_debug.txt  memory_output.txt  program.asm  program.jack  program.out  program.vm
OS from Assembly/: CPU.cpp  OS from Assembly.vcxproj  main.cpp
VMTranslator/: AST.cpp  AST.h  Assembler.cpp  Assembler.h  Buffer.h  DFA.txt  Lexer.cpp  Lexer.h  Parser.cpp  SemanticAnalysis.cpp  SemanticAnalysis.h  Translator.cpp  grammar.txt  program.vm
